--- a/Mini-e-commerce-admin/src/App.css
+++ b/Mini-e-commerce-admin/src/App.css
@@ -1,10 +1,34 @@
 body {
   background-color: rgb(216, 204, 228);
+  color: white;
+  padding: 2rem;
 }
 
-nav {
+#root {
+height: 100%;
+}
+
+.nav {
   display: flex;
+  background-color: blueviolet;
   align-items: center;
   justify-content: space-between;
-  background-color: blueviolet;
+
 }
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 200px;
+}
+
+.logo {
+  height: 75px;
+}
+
+.brand-name {
+  font-size: 1.5rem;
+}
+
+
+
